[package]
name = "b58uuid"
version = "1.0.0"
edition = "2021"
authors = ["B58UUID Contributors"]
description = "Fast, secure Base58 encoding/decoding for UUIDs with minimal dependencies"
license = "MIT"
repository = "https://github.com/b58uuid/b58uuid-rs"
documentation = "https://docs.rs/b58uuid"
homepage = "https://github.com/b58uuid"
readme = "README.md"
keywords = ["uuid", "base58", "encoding", "short-uuid", "base58check"]
categories = ["encoding", "cryptography", "no-std"]
exclude = [
    "target/",
    ".github/",
    ".DS_Store"
]

[lib]
name = "b58uuid"
path = "src/lib.rs"

[dependencies]
getrandom = "0.2"

[dev-dependencies]